--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "edge-device-manager-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Backend API for Edge Device Manager",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node src/index.js",
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.19.3",
     "ssh2": "^1.15.0",
-    "ws": "^8.16.0",
-    "dotenv": "^16.4.1"
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
   }
 }
-
-
